--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@swc/core": "^1.10.6",
     "isotope-layout": "^3.0.6",
     "jarallax": "^1.12.8",
     "next": "12.0.3",
+    "nodemailer": "^6.9.16",
     "parallax-js": "^3.1.0",
     "react": "17.0.2",
     "react-countup": "^6.1.0",
@@ -22,10 +24,17 @@
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
+    "@eslint/config-array": "^0.19.1",
+    "@eslint/object-schema": "^2.1.5",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "glob": "^11.0.0",
+    "prettier": "^2.8.8",
+    "rimraf": "^6.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
