--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@swc/core": "^1.10.6",
+    "emailjs-com": "^3.2.0",
     "isotope-layout": "^3.0.6",
     "jarallax": "^1.12.8",
     "next": "12.0.3",
-    "nodemailer": "^6.9.16",
     "parallax-js": "^3.1.0",
     "react": "17.0.2",
     "react-countup": "^6.1.0",
